--- a/Zen-HTML.tmbundle/Templates/HTML 4_01 Strict.tmTemplate/index.htm
+++ b/Zen-HTML.tmbundle/Templates/HTML 4_01 Strict.tmTemplate/index.htm
@@ -1,10 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="ru">
-<head>
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-</head>
-<body>
-	
-</body>
+<!DOCTYE HTML>
+<html>
+
+    <head>
+           <a href="http://snappride.com"><img src="file:///C:/Users/Franklyn/Desktop/photo_2016-04-23_01-40-50.jpg"></img></a>
+           <tittle> Snapp Ride </tittle>
+               
+    </head>
+
+    
+    <body>
+           <a href="http://snappride.com"><h1> Register NOW Click Here </h1></a>
+        
+           <p> You will receive an email after registration </p>
+  
+    </body>
+
 </html>
